# app-event-management

./: .coveragerc  .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: test.yml
event_management/: asgi.py  settings.py  urls.py  wsgi.py
event_management/events/: admin.py  apps.py
event_management/events/fixtures/: events.json
event_management/events/migrations/: 0001_initial.py  0002_auto_20210106_1032.py  0003_event.py  0004_auto_20210106_1408.py  0005_auto_20210106_2323.py  0006_auto_20210107_0417.py
event_management/events/models/: __init__.py  event.py  user.py
event_management/events/serializers/: __init__.py  event.py  user.py
event_management/events/tests/: factories.py  test_apps.py  test_event.py  test_user.py
event_management/events/views/: __init__.py  event.py  user.py
