[tool.poetry]
name = "app-event-management"
version = "0.1.0"
description = "A sample event management application"
authors = ["Shi Han NG <shihanng@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
